Should address #12 and more of #11. Need to test more. Time for airplane.